<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/add_event"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        android:text="@string/add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_event"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/show_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_event" />

    <Button
        android:id="@+id/export_to_json"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/export_to_json_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_event" />

</androidx.constraintlayout.widget.ConstraintLayout>